--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: iebug
 description: A sample web application
 dependencies:
-  browser: any
-  angular: any
-  shadow_dom: any
+  browser: 0.10.0+2
+  angular: 0.11.0
+  shadow_dom: 0.10.0
