Shadow dom polyfill replaced with Web_components (suggested by Günter Zöchbauer here: http://stackoverflow.com/questions/23985539/angular-dart-components-cssurl-not-working-in-internet-explorer)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,4 +3,4 @@ description: A sample web application
 dependencies:
   browser: 0.10.0+2
   angular: 0.11.0
-  shadow_dom: 0.10.0
+  web_components: any
